# amsc-24-25-classroom-09-mc-Montecarlo

./: .gitignore  CMakeLists.txt  Polytopes.cpp  README.md  main.cpp  prova4.cpp
src/: main.cpp
src/domain/: Polytope.cpp  Polytope.h  hypersphere.cpp  hypersphere.h  integration_domain.h  polygon2d.cpp  polygon2d.h  polytope.cpp  polytope.h
src/integrators/: abstract_integrator.h  metropolis_hastings_integrator.cpp  metropolis_hastings_integrator.h  monte_carlo_integrator.cpp  monte_carlo_integrator.h
